# ProjectAlbion

./: BUILD.md  Dockerfile.api  IMPLEMENTATION_STATUS.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
albion/: __init__.py  models.py  runner.py
albion/agents/: climate.py  distribution.py  macro.py  taxbenefit.py
albion/api/: main.py
albion/dnos/: selector.py
albion/sign/: sigstore_service.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: page.tsx
apps/web/components/: PolicyCard.tsx  SimulationControls.tsx
configs/: constitution.json
configs/schemas/: constitution.v1.schema.json  proposal.v1.schema.json
db/schemas/: 001_core_schema.sql
docs/: ARCHITECTURE.md  MANDATE.md  SPEC.md
infra/tla/: KillSwitch.tla
policies/constitution/: v1.rego
tools/: fetch_data.py  generate_mock_data.py
