[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "albion-engine"
version = "1.0.0"
description = "ALBION National Options Engine - Lawful, diverse, near-optimal policy simulation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ALBION Team"},
]
dependencies = [
    # Core compute
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # Data ingestion & transformation
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
    "pyarrow>=14.0.0",
    "dbt-core>=1.7.0",
    "dbt-postgres>=1.7.0",

    # Database
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # API & async
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aio-pika>=9.3.0",  # RabbitMQ async client

    # Security & signing
    "cryptography>=41.0.0",
    "pynacl>=1.5.0",

    # Policy gates
    "opa-python-client>=1.4.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",  # Property-based testing

    # Utilities
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",  # Beautiful console output
    "typer>=0.9.0",  # CLI framework
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
]

[project.scripts]
albion = "albion.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "RET", "SIM", "ARG", "PL", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=albion --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["albion"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
